--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2861,18 +2861,18 @@
                 `<tr><td>${row[0]}</td><td>${row[1]}</td><td>${row[2]}</td></tr>`
             ).join('');
 
-            // scAtlas data sources table (9 analyses)
+            // scAtlas data sources table (10 analyses with actual record counts)
             const scatlasData = [
-                ['Organ Signatures', 'Mean cytokine activities per organ (normal tissue)', stats.scatlas.n_organ_signatures.toLocaleString()],
-                ['Cell Type Signatures', 'Mean activities per cell type across organs', stats.scatlas.n_celltype_signatures.toLocaleString()],
-                ['Tumor vs Adjacent', 'Differential activity between tumor and adjacent tissue', stats.scatlas.n_cell_types_cancer + ' cell types'],
-                ['Normal vs Cancer', 'Matched organ-cancer type comparisons', '13 organ-cancer pairs'],
-                ['Immune Infiltration', 'Immune cell proportions and activity per cancer type', 'Per cancer type'],
-                ['T Cell State', 'Cytokine activity across T cell functional states', 'Exhausted/Cytotoxic/Memory/Naive'],
-                ['Exhaustion Differential', 'Exhausted vs non-exhausted T cell signatures', 'Tex vs non-Tex'],
-                ['CAF Signatures', 'Cancer-associated fibroblast subtype activities', 'Per cancer type'],
-                ['Adjacent Tissue', 'Field effect analysis in tumor-adjacent tissue', 'Per cancer type'],
-                ['Pan-Cancer Signatures', 'Signatures consistent across multiple cancers', 'Cross-cancer']
+                ['Organ Signatures', '35 organs × 1,213 signatures (43 CytoSig + 1,170 SecAct)', stats.scatlas.n_organ_signatures.toLocaleString()],
+                ['Cell Type Signatures', '376 cell types × 1,213 signatures across 35 organs', stats.scatlas.n_celltype_signatures.toLocaleString()],
+                ['Cancer Type Signatures', '29 cancer types × 119 cell types × signatures', '35,177'],
+                ['Tumor vs Adjacent', '8 cancer types × 1,213 signatures (tumor vs adjacent differential)', '1,213'],
+                ['Organ-Cancer Matrix', '35 organs vs 29 cancer types matched comparison', '17,007'],
+                ['Immune Infiltration', '13 cancer types × immune cells × 1,213 signatures', '31,538'],
+                ['T Cell State', '7 cancer types × 4 states × 43 CytoSig signatures', '1,204'],
+                ['Exhaustion Differential', '43 CytoSig signatures (96 exhausted vs 734 non-exhausted cells)', '43'],
+                ['CAF Signatures', '5 cancer types × 4 subtypes (myCAF, iCAF, apCAF, other) × signatures', '8,674'],
+                ['Pan-Cancer Signatures', 'Conserved signatures across multiple cancer types', '1,213']
             ];
             document.getElementById('data-sources-scatlas').innerHTML = scatlasData.map(row =>
                 `<tr><td>${row[0]}</td><td>${row[1]}</td><td>${row[2]}</td></tr>`
