--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2879,18 +2879,15 @@
                 `<tr><td>${row[0]}</td><td>${row[1]}</td><td>${row[2]}</td></tr>`
             ).join('');
 
-            // scAtlas data sources table (10 analyses with actual record counts)
+            // scAtlas data sources table - matches 7 analysis tabs
             const scatlasData = [
-                ['Organ Signatures', '35 organs × 1,213 signatures (43 CytoSig + 1,170 SecAct)', stats.scatlas.n_organ_signatures.toLocaleString()],
-                ['Cell Type Signatures', '376 cell types × 1,213 signatures across 35 organs', stats.scatlas.n_celltype_signatures.toLocaleString()],
-                ['Cancer Type Signatures', '29 cancer types × 119 cell types × signatures', '35,177'],
-                ['Tumor vs Adjacent', '8 cancer types × 1,213 signatures (tumor vs adjacent differential)', '1,213'],
-                ['Organ-Cancer Matrix', '35 organs vs 29 cancer types matched comparison', '17,007'],
-                ['Immune Infiltration', '13 cancer types × immune cells × 1,213 signatures', '31,538'],
-                ['T Cell State', '7 cancer types × 4 states × 43 CytoSig signatures', '1,204'],
-                ['Exhaustion Differential', '43 CytoSig signatures (96 exhausted vs 734 non-exhausted cells)', '43'],
-                ['CAF Signatures', '5 cancer types × 4 subtypes (myCAF, iCAF, apCAF, other) × signatures', '8,674'],
-                ['Pan-Cancer Signatures', 'Conserved signatures across multiple cancer types', '1,213']
+                ['Cell Types', '376 cell types × 1,213 signatures across 35 organs (normal tissue)', stats.scatlas.n_celltype_signatures.toLocaleString()],
+                ['Tissue Atlas', '35 normal organs + 29 cancer types organ signatures', `${stats.scatlas.n_organ_signatures.toLocaleString()} + 35,177`],
+                ['Differential Analysis', 'Tumor (147) vs Adjacent (105) vs Normal (748) tissue comparison', '1,213'],
+                ['Immune Infiltration', '13 cancer types × immune/stromal/malignant cell proportions', '31,538'],
+                ['T Cell State', '7 cancer types × 4 states (exhausted, cytotoxic, memory, naive)', '1,204'],
+                ['Exhaustion Differential', 'Exhausted (96 cells) vs non-exhausted (734 cells) T cell signatures', '43'],
+                ['CAF Types', '5 cancer types × 4 subtypes (myCAF, iCAF, apCAF, other)', '8,674']
             ];
             document.getElementById('data-sources-scatlas').innerHTML = scatlasData.map(row =>
                 `<tr><td>${row[0]}</td><td>${row[1]}</td><td>${row[2]}</td></tr>`
